# Stackra

./: .gitignore  API_DEVELOPMENT_GUIDE.md  DEVELOPER_SETUP.md  LICENSE  Makefile  README.md  Stackra.sln  docker-compose.yml  gen_backend.py  generate_backend.js
backend/: .env.example  Program.cs  README.md  Stackra.Backend.csproj  Stackra.Backend.http  WeatherForecast.cs  appsettings.json  pyproject.toml
backend/Controllers/: AuthController.cs  ClientsController.cs  DeliverablesController.cs  FreelancersController.cs  JobsController.cs  PostsController.cs  ProposalsController.cs  ReviewsController.cs  SkillsController.cs  UsersController.cs
backend/Models/Auth/: AuthResponse.cs  ClientRegisterRequest.cs  FreelancerRegisterRequest.cs  LoginRequest.cs  RefreshRequest.cs  RegisterRequest.cs  UserProfileResponse.cs  UserRecord.cs
backend/Models/Clients/: ClientFaxRequest.cs  ClientPhoneRequest.cs  ClientProfileResponse.cs  ClientUpdateRequest.cs
backend/Models/Deliverables/: Deliverable.cs
backend/Models/Freelancers/: ExperienceDeleteRequest.cs  ExperienceRequest.cs  FreelancerProfileResponse.cs  FreelancerSkillRequest.cs  FreelancerUpdateRequest.cs  (+1 more)
backend/Options/: JwtOptions.cs
backend/Properties/: launchSettings.json
backend/Repositories/: AuthRepository.cs  ClientRepository.cs  DatabaseService.cs  DeliverableRepository.cs  FreelancerRepository.cs  JobRepository.cs  PostRepository.cs  ProposalRepository.cs  ReviewRepository.cs  RoleRepository.cs  SkillRepository.cs  UserRepository.cs
backend/Services/: AuthService.cs
backend/src/: app.py
(+71 files in other folders)
