[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "pywin32>=311; sys_platform == 'win32'",
    "python-dotenv>=1.2.2",
]
